--- a/midias/css/estilo.css
+++ b/midias/css/estilo.css
@@ -2969,32 +2969,7 @@ inputs_inser_caixa p{
 }
 
 
-.exibir_soma p{
-    margin: 0 auto;
-    text-align: center;
-    width: 250px;
-    padding: 5px;
-    background-color: rgb(10, 122, 16);
-    color:#fff;
-    font-size: 14px;
-    font-family: cursive;
-    margin-bottom: 20px;
-    border-radius: 2px;
-    
-}
 
-#exibir_soma_negativa p{
-    margin: 0 auto;
-    text-align: center;
-    width: 300px;
-    padding: 5px;
-    background-color: rgb(255, 0, 0);
-    color:#fff;
-    font-size: 14px;
-    font-family: cursive;
-    margin-bottom: 20px;
-    border-radius: 2px;
-}
 
 
 .tabela_caixa table{
@@ -3264,3 +3239,46 @@ inputs_inser_caixa p{
     margin-top: 20px;
 }
 /* -----------------------pagina de login fim -------------------------- */
+.limites_emp_disp{
+    float: left;
+    height: 30px;
+    width: 100%;
+    background-color: #3e5383;
+}
+.limites_emp_disp h5{
+    margin-top: 4px;
+    line-height: 22px;
+    border-radius: 3px;
+    margin-left: 10px;
+    float: left;
+    padding-left: 5px;
+    padding-right: 5px;
+}
+.estilo_h5_limite{
+    
+    background-color: #463c69;
+    color:rgb(165, 155, 155);
+}
+
+.exibir_soma {
+    
+   
+    
+    border-radius: 3px;
+    margin-left: 10px;
+    float: left;
+    font-size: 16px;
+    background-color: #125710;
+    color:#fff;
+    
+}
+
+#exibir_soma_negativa {
+    border-radius: 3px;
+    margin-left: 10px;
+    float: left;
+    font-size: 16px;
+    background-color: #bd1212;
+    color:#fff;
+    
+}
