--- a/midias/css/estilo.css
+++ b/midias/css/estilo.css
@@ -1641,7 +1641,8 @@ label {
 }
 
 .pesquisa_prod{
-     margin-bottom: 35px;
+    /* background-color: red; */
+    margin-bottom: 35px;
     border:0;
     float: left;
     width: 100%; 
@@ -1649,24 +1650,9 @@ label {
   
 }
 
-.pesquisa_prod input{
-     float: left;
-     text-align: center;
-     font-size: 18px;
-     outline: none;
-     margin-bottom: 25px;   
-     margin-top: 5px;
-     height: 50px;
-    
-  
-}
 
 
-.pesquisa_prod input::-webkit-input-placeholder{     
-      color: #fff;
-      font-size: 13px;
-  
-}
+
 
 
 
@@ -1695,26 +1681,44 @@ label {
 
 
 .ip_pe{
-    margin-top: 15px;
-    margin-bottom: 15px;
-    width: 100%;
-    border:0px solid #3D018C; 
-    border-left: none;
-    border-right:  none;
-    text-transform: uppercase;
-    background-color: #99ccff;
-    color:#5a076b;
+    margin-left: 200px;
+    border-top-left-radius: 4px;   
+    border-bottom-left-radius: 4px;   
+    color:rgb(59, 59, 59);
+     float: left;
+     text-align: center;
+     font-size: 18px;
+     outline: none;
+     margin-bottom: 25px;   
+     margin-top: 5px;
+     height: 40px;
+     width: 30%;
+     border: 1px solid rgb(194, 189, 189);
+     font-size: 14px;
    
 }
 
 .bt_pe{  
-    border:0;
-    width: 150px;
-    background-color:#059348;
-    color:#fff;
-     text-transform: capitalize;
-     cursor: pointer;
-     display: none;
+    cursor: pointer;
+    background-image: url("../../midias/imagens/lupa.png");
+    background-size: 22px;
+    background-repeat: no-repeat;
+    background-position: center ;
+    border-bottom-right-radius: 4px;    
+    border-top-right-radius: 4px;    
+    color:rgb(88, 85, 85);
+     float: left;
+     text-align: center;
+     font-size: 18px;
+     outline: none;
+     margin-bottom: 25px;   
+     margin-top: 5px;
+     height: 40px;
+     width: 50px;
+     background-color: #d2d6d4;
+     border: 1px solid rgb(212, 208, 208);
+     font-size: 14px;
+    
 }
 
 
