--- a/midias/css/estilo.css
+++ b/midias/css/estilo.css
@@ -1322,7 +1322,7 @@ hr {
 }
 
 @media print {
-   
+
 
     .nt_corpo td a,
     .nt_corpo_ td a,
@@ -1332,8 +1332,8 @@ hr {
     .nota_cliente input,
     .bt_voltar,
     .n_imprimir,
-    .toggle-1 ,
-    .limites_emp_disp{
+    .toggle-1,
+    .limites_emp_disp {
         display: none;
         margin-bottom: 0;
 
@@ -1345,7 +1345,7 @@ hr {
         background-color: none;
         padding: 4px;
         font-size: 14px;
-        
+
 
     }
 
@@ -1443,7 +1443,7 @@ hr {
 
     }
 
-   
+
 
     .nt_corpo tr {
         font-size: 9px;
@@ -1488,8 +1488,9 @@ hr {
 
 .n_historico {
     color: #000;
-       
+
 }
+
 .n_historico p {
     font-weight: normal;
     font-family: cursive;
@@ -1499,12 +1500,12 @@ hr {
     background-color: rgb(49, 4, 61);
     text-align: center;
     margin-bottom: 20px;
-       
+
 }
 
 .total_geral {
     color: #000;
-       
+
 }
 
 .historico {
@@ -1524,11 +1525,12 @@ hr {
     margin: 0 auto;
 
 }
+
 .historico tbody {
-    border:1px solid #cdc;
-     color: #000 !important;
+    border: 1px solid #cdc;
+    color: #000 !important;
     background-color: #fff;
-    
+
 
 }
 
@@ -1539,7 +1541,7 @@ hr {
 }
 
 .historico th {
-    background-color: rgb(49, 4, 61);   
+    background-color: rgb(49, 4, 61);
     color: #fff;
     padding: 5px;
     font-size: 14px;
@@ -1548,7 +1550,7 @@ hr {
 }
 
 .historico td {
-    text-transform: uppercase;    
+    text-transform: uppercase;
     padding: 10px;
     font-size: 11px;
 
@@ -3483,4 +3485,88 @@ inputs_inser_caixa p {
 
 .tm_desc {
     width: 400px;
+}
+
+.carimbo {
+    display: none;  
+    border: 1px solid #000; 
+    margin: 80px auto;
+    width: 400px;
+    height: 120px;
+
+}
+
+.carimbo h3 {    
+    
+    
+    font-weight: normal;
+    font-size: 30px;
+    text-align: center;
+
+
+}
+
+.carimbo h4 {
+    text-align: center;    
+    font-weight: normal;
+    font-size: 25px;
+
+}
+.carimbo h5 {
+    text-align: center;    
+    font-weight: normal;
+    font-size: 15px;
+
+}
+
+
+
+
+
+.carimbo1 {
+    display: none;
+    margin: 0px 0px 0px 30px;
+    height: 200px;
+    
+
+}
+
+.carimbo1 h3 {
+    font-family: cursive;
+    text-transform: uppercase;
+    font-weight: normal;
+    font-size: 30px;
+
+
+}
+.carimbo2 {
+    display: none;
+    margin: 0px 0px 0px 30px;
+    height: 200px;
+    
+
+}
+
+.carimbo2 h3 {
+    font-family: cursive;
+    text-transform: uppercase;
+    font-weight: normal;
+    font-size: 20px;
+
+}
+.carimbo2 h4 {
+    font-family: cursive;
+    text-transform: uppercase;
+    font-weight: normal;
+    font-size: 10px;
+
+}
+
+.tipo_d_nota{
+    
+    background-color: #bbb;
+    margin: 30px auto;
+    width: 350px;
+    
+    
 }
